--- a/pages/goods.html
+++ b/pages/goods.html
@@ -30,19 +30,19 @@
   <main>
     <div class="catalog">
       <div class="product">
-        <img src="https://via.placeholder.com/150?text=Шу+пуэр" alt="Шу пуэр">
+        <img src="../images/goods1.jpg" alt="Шу пуэр">
         <h3>Шу Пуэр 357 г</h3>
         <p class="price">1800 руб.</p>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150?text=Шэн+пуэр" alt="Шэн пуэр">
+        <img src="../images/goods2.jpg" alt="Шэн пуэр">
         <h3>Шэн Пуэр 2008 г.</h3>
         <p class="price">2500 руб.</p>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/150?text=Мини-точа" alt="Мини-точа пуэр">
+        <img src="../images/goods3.jpg" alt="Мини-точа пуэр">
         <h3>Мини-точа Шу Пуэр</h3>
         <p class="price">100 руб./шт.</p>
       </div>
