--- a/pages/goods.html
+++ b/pages/goods.html
@@ -21,7 +21,7 @@
   </header>
 
   <nav>
-    <a href="index.html">Главная</a>
+    <a href="../index.html">Главная</a>
     <a href="news.html">Новости</a>
     <a href="goods.html">Каталог</a>
     <a href="contacts.html">Контакты</a>
