--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Семестровая работа</title>
-        <link rel="stylesheet" href="../style/styles.css">
+        <link rel="stylesheet" href="style/styles.css">
     </head>
     <body>
         <div class="page-container">
             <div class="header">Хэдер</div>
             <div class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Главная</a></li>
                     <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
                     <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
                     <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
@@ -20,7 +20,7 @@
             <div class="content">
                 <div class="profile-header">
                     <h1 class="profile-title">Информация об авторе</h1>
-                    <img class="profile-photo" src="../images/photo.png" alt="Фото автора">
+                    <img class="profile-photo" src="images/photo.png" alt="Фото автора">
                     <h2 class="profile-name">Серебрянский Ярослав Антонович</h2>
                     <p class="profile-group">ЭФБО-15-24</p>
                 </div>
