--- a/pages/goods.html
+++ b/pages/goods.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../style/styles.css">
   <title>Каталог Пуэра</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
