--- a/pages/news.html
+++ b/pages/news.html
@@ -10,7 +10,7 @@
   <div class="page-container">
     <!-- Хэдер -->
     <header class="header">
-      <h1>Хэдер</h1>
+      <h1>Пуэрбрейк</h1>
     </header>
     
     <!-- Меню -->
