--- a/pages/goods.html
+++ b/pages/goods.html
@@ -24,7 +24,7 @@
   <nav>
     <a href="../index.html">Главная</a>
     <a href="news.html">Новости</a>
-    <a href="goods.html">Каталог</a>
+    <a href="goods.html">Товары</a>
     <a href="contacts.html">Контакты</a>
   </nav>
 
