--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer">Футер</div>    
+            <div class="footer">Все права защищены.</div>    
         </div>
     </body>
 </html>
